# Baketa

./: .editorconfig  .gitignore  .mcp.json  0.26.0  =6.31.0  BUILD.md  Baketa.sln  BottleneckAnalysisTest.cs  CLAUDE.md  DirectTranslationTest.cs  DirectTranslationTest.csproj  Directory.Build.props  FIX7_FINAL_IMPLEMENTATION_PLAN.md  FIX7_Investigation_Report_for_OptionB.md  FIX7_OptionC_Improved_Implementation.md  FIX7_OptionC_Improved_Summary.md  GEMINI.md  GlobalSuppressions.cs  HYBRID_RESOURCE_MANAGEMENT_DESIGN.md  LICENSE  NLLB200_並列処理改善設計.md  OCR_NLLB200_RESOURCE_CONFLICT_ANALYSIS.md  OPUS_MT_SETUP_GUIDE.md  PHASE4_IMPLEMENTATION_STATUS.md  PHASE6.1_VERIFICATION_CHECKLIST.md  Phase4TestRunner.cs  QuickTranslationTest.cs  QuickTranslationTest.csproj  README.md  ROI_TRANSLATION_PIPELINE_INTEGRATION.md  SafeFileWriterTest.cs  TokenValidationTest.cs  TokenValidationTest.csproj  TranslationOrchestrationService.cs.backup2  VocabSizeAnalyzer.cs  VocabSizeTestSingle.cs  VocabSizeTestSingle.csproj  analysis_output.xml  app_log.txt  app_logs.txt  (+151 more)
.claude/: context.md  instructions.md  project.json  settings.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.serena/: project.yml
Baketa.Core/: Baketa.Core.csproj
BaketaCaptureNative/: BaketaCaptureNative.sln  BaketaCaptureNative.vcxproj  BaketaCaptureNative.vcxproj.filters  CMakeLists.txt
BaketaCaptureNative/include/: BaketaCaptureNative.h
BaketaCaptureNative/src/: BaketaCaptureNative.cpp  DxgiGpuDetector.cpp  DxgiGpuDetector.h  ResizeShader.hlsl  WindowsCaptureSession.cpp  WindowsCaptureSession.h  pch.cpp  pch.h
(+2610 files in other folders)
